<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margem"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/exercicio"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/nome"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNome"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/sexo"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/rdbFeminino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feminino"
            android:layout_weight="1"
            />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/Telefone"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTelefone"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/preferencias"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkMusica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Musica" />

        <CheckBox
            android:id="@+id/chkCinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cinema" />

        <CheckBox
            android:id="@+id/chkEsporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Esporte" />
        <CheckBox
            android:id="@+id/chkGastronomia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gastronomia" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3A46D9"
        android:text="@string/notificacoes"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swtNotificacoes"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:padding="@dimen/margem"
        android:layout_marginTop="@dimen/margem"
        android:visibility="visible"
        >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtPreferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtNotificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>






</LinearLayout>